add migrate + db seed para email
